parser/src/parser/expressions/snapshots/test__parser::expressions::match_expr::test::parse_empty_match_expr.snap
---
created: "2020-02-06T15:57:27.640114Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/match_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 24)
  FN_DEF@[0; 24)
    FN_KW@[0; 2) "fn"
    NAME@[2; 7)
      WHITESPACE@[2; 3) " "
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 24)
      BLOCK@[10; 24)
        L_CURLY@[10; 11) "{"
        WHITESPACE@[11; 12) " "
        EXPR_STMT@[12; 22)
          MATCH_EXPR@[12; 22)
            MATCH_KW@[12; 17) "match"
            WHITESPACE@[17; 18) " "
            IDENT_EXPR@[18; 20)
              NAME@[18; 19)
                IDENT@[18; 19) "a"
              WHITESPACE@[19; 20) " "
            L_CURLY@[20; 21) "{"
            MATCH_ARM_LIST@[21; 21)
            R_CURLY@[21; 22) "}"
        SEMI@[22; 23) ";"
        R_CURLY@[23; 24) "}"

