parser/src/parser/expressions/snapshots/test__parser::expressions::match_expr::test::parse_match_expr.snap
---
created: "2020-03-01T23:46:21.287483Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/match_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 40)
  FN_DEF@[0; 40)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 40)
      BLOCK@[10; 40)
        L_CURLY@[10; 11) "{"
        WHITESPACE@[11; 12) " "
        EXPR_STMT@[12; 38)
          MATCH_EXPR@[12; 38)
            MATCH_KW@[12; 17) "match"
            WHITESPACE@[17; 18) " "
            TUPLE_EXPR@[18; 24)
              L_PAREN@[18; 19) "("
              IDENT_EXPR@[19; 20)
                NAME@[19; 20)
                  IDENT@[19; 20) "a"
              COMMA@[20; 21) ","
              IDENT_EXPR@[21; 22)
                NAME@[21; 22)
                  IDENT@[21; 22) "b"
              R_PAREN@[22; 23) ")"
              WHITESPACE@[23; 24) " "
            L_CURLY@[24; 25) "{"
            WHITESPACE@[25; 26) " "
            MATCH_ARM_LIST@[26; 37)
              MATCH_ARM@[26; 32)
                BIND_PAT@[26; 27)
                  NAME@[26; 27)
                    IDENT@[26; 27) "x"
                WHITESPACE@[27; 28) " "
                FAT_ARROW@[28; 29) "="
                WHITESPACE@[29; 30) " "
                LITERAL@[30; 32)
                  INT_NUMBER@[30; 32) "10"
              COMMA@[32; 33) ","
              MATCH_ARM@[33; 37)
                LITERAL_PAT@[33; 35)
                  LITERAL@[33; 34)
                    INT_NUMBER@[33; 34) "1"
                  WHITESPACE@[34; 35) " "
                FAT_ARROW@[35; 36) "="
                LITERAL@[36; 37)
                  INT_NUMBER@[36; 37) "3"
            R_CURLY@[37; 38) "}"
        SEMI@[38; 39) ";"
        R_CURLY@[39; 40) "}"

