parser/src/parser/expressions/snapshots/test__parser::expressions::return_expr::test::parse_return_expr.snap
---
created: "2020-02-06T15:57:27.659986Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/return_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 23)
  FN_DEF@[0; 23)
    FN_KW@[0; 2) "fn"
    NAME@[2; 7)
      WHITESPACE@[2; 3) " "
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 23)
      BLOCK@[10; 23)
        L_CURLY@[10; 11) "{"
        EXPR_STMT@[11; 21)
          RETURN_EXPR@[11; 21)
            RETURN_KW@[11; 17) "return"
            BIN_EXPR@[17; 21)
              WHITESPACE@[17; 18) " "
              LITERAL@[18; 19)
                INT_NUMBER@[18; 19) "1"
              PLUS@[19; 20) "+"
              LITERAL@[20; 21)
                INT_NUMBER@[20; 21) "1"
        SEMI@[21; 22) ";"
        R_CURLY@[22; 23) "}"

