parser/src/parser/expressions/snapshots/test__parser::expressions::unary::test::parse_unary_expr.snap
---
created: "2020-02-03T16:29:14.873012Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/unary.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 20)
  FN_DEF@[0; 20)
    FN_KW@[0; 2) "fn"
    NAME@[2; 7)
      WHITESPACE@[2; 3) " "
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK@[10; 20)
      L_CURLY@[10; 11) "{"
      EXPR_STMT@[11; 16)
        PREFIX_EXPR@[11; 16)
          EXCL@[11; 12) "!"
          LITERAL@[12; 16)
            TRUE_KW@[12; 16) "true"
      SEMI@[16; 17) ";"
      EXPR_STMT@[17; 19)
        PREFIX_EXPR@[17; 19)
          MINUS@[17; 18) "-"
          LITERAL@[18; 19)
            INT_NUMBER@[18; 19) "1"
      R_CURLY@[19; 20) "}"

